Form, corrigido erro do input

--- a/materia.html
+++ b/materia.html
@@ -35,12 +35,13 @@
                 <form action="" class="update-curso">
                     <h3>Adicionar Materia</h3>
                     <div class="txtb">
-                        <span data-placeholder="Curso">Curso</span>
-                        <select name="" id="" class="txtb">
+                        <span data-placeholder="">Curso</span>
+                        <input type="text">
+                        <!--<select name="" id="" class="txtb">
                                     <option value="">Algoritimo</option>
                                     <option value="">Matematica</option>
                                     <option value="">Portugues</option>
-                                </select>
+                                </select>-->
                     </div>
                     <div class="txtb">
                         <span>Materia</span>
@@ -51,7 +52,7 @@
                         <input type="text">
                     </div>
                     <div class="btn-update">
-                        <input type="submit" value="Enviar">
+                        <input type="submit" class="logbtn" value="Cadastrar">
                     </div>
                 </form>
             </main>
